@@ -50,7 +50,7 @@ sourceSets {
 }
 
 compileIntegrationTestKotlin {
-    kotlinOptions.jvmTarget = "11"
+    kotlinOptions.jvmTarget = "$javaVer"
 }
 
 configurations {
@@ -60,6 +60,28 @@ configurations {
 
 application {
     mainClass = "org.wycliffeassociates.otter.jvm.workbookapp.MainKt"
+    applicationDefaultJvmArgs = [
+            '--add-modules=ALL-MODULE-PATH',
+            '--add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
+            '--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+            '--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+            '--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
+            '--add-exports=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED',
+            '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
+            '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
+            '--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED',
+            '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
+            '--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED'
+    ]
 }
 
 test {
@@ -120,6 +142,7 @@ dependencies {
     // JFoenix
     implementation "com.jfoenix:jfoenix:$jfoenixVer"
     implementation "com.github.bkenn:kfoenix:$kfoenixVer"
+    implementation "io.github.palexdev:materialfx:$materialFxVer"
 
     // ControlsFX
     implementation "org.wycliffeassociates:javafx-gridview:$javaGridviewVer"
@@ -155,7 +178,7 @@ dependencies {
     testImplementation "io.mockk:mockk:$mockkVer"
     testImplementation "org.testfx:testfx-core:$testFxVer"
     testImplementation "org.testfx:testfx-junit:$testFxVer"
-    testImplementation "org.testfx:openjfx-monocle:$testFxMonocleVer"
+    testImplementation "one.jpro:openjfx-monocle:$testFxMonocleVer"
     integrationTestImplementation group: 'junit', name: 'junit', version: "$junitVer"
     integrationTestImplementation "org.mockito:mockito-core:$mockitoVer"
     integrationTestImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlinVer"
